--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Check App Pro",
-  "short_name": "CheckApp",
-  "start_url": "index.html",
+  "name": "App Checker",
+  "short_name": "Checker",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://via.placeholder.com/512",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
